# BreadFree-Simu

./: ._backtest_result.html  .gitignore  CHANGELOG_NVIDIA_API.md  LICENSE  NVIDIA_API_快速配置.md  README.md  START_HERE_NVIDIA.md  grid_search.sh  init_database.py  main.py  pyproject.toml  requirements.txt  test_multi_agent_models.py  test_nvidia_api.py
.backup/: download_etf_for_rotation.py
breadfree/: ._data  config.yaml
breadfree/data/: data_fetcher.py  data_importer.py  database.py  db_models.py  get_top150_code.py  news_fetcher.py  stock_pool.py
breadfree/engine/: backtest_engine.py  broker.py
breadfree/strategies/: agent_strategy.py  base_strategy.py  benchmark_strategy.py  double_ma_strategy.py  effi_agent_strategy.py  effi_agent_strategy_signal.py  effi_rotation_strategy.py  ma_strategy.py  rotation_strategy.py  triple_momentum_strategy.py
breadfree/utils/: llm_client.py  logger.py  metrics.py  plot_heatmap.py  plotter.py  portfolio.py
docs/: Quantitative Trading Agent.md  database_model.md  llm_provider_comparison.md  nvidia_api_setup.md  zhihu_agent_etf_rotation.md  zhihu_hyperparameter_dilemma.md
scripts/: grid_search.sh  tm_grid_search.sh
